# MAVOR

./: .gitignore  CMakeLists.txt  README.md
automation_scripts/: example_execution_script.py  example_material_execution_script.py  process_endf_library.py  process_single_material.py
include/: constants.hpp  energy_grid.hpp  file_read.hpp  file_write.hpp  integration.hpp  interpolation.hpp  linearize.hpp  predefined_energy_grids.hpp  process_file.hpp  runtime_variables.hpp  utilities.hpp
include/common/: arange.hpp  clenshaw.hpp  file_reading.hpp  hdf5_file.hpp  horner.hpp  integration.hpp  interpolation.hpp  jagged.hpp  linearize.hpp  linspace.hpp  runtime_variables.hpp  scale_basis.hpp  utilities.hpp
include/elastic/: add_elastic.hpp  elastic.hpp
include/njoy/: leapr_file.hpp  njoy.hpp
include/otf/: otf.hpp  process_otf.hpp  sab_file.hpp
include/otf/fitting_functions/: basis_chebyshev.hpp  basis_cosine.hpp  basis_exponential.hpp  basis_inverse_exponential.hpp  basis_inverse_log_power.hpp  basis_inverse_power.hpp  basis_inverse_sqrt_log_power.hpp  basis_inverse_sqrt_power.hpp  basis_legendre.hpp  basis_log_power.hpp  basis_power.hpp  basis_sine.hpp  basis_sine_cosine.hpp  basis_sqrt_log_power.hpp  basis_sqrt_power.hpp  chebychev.hpp  chebyshev.hpp  cosine.hpp  fitting_function.hpp  inverse_sqrt_power.hpp  legendre.hpp  log_power.hpp
include/predefined/: predefined_coeff_evaluations.hpp  predefined_energy_grids.hpp  predefined_fit_settings.hpp
include/sab/: energy_grid.hpp  file_read.hpp  file_write.hpp  process_file.hpp  sab.hpp
include/sample/: sample.hpp  sample_cdf.hpp  sample_coeff.hpp  sample_search.hpp
include/sample/fit_evaluation/: chebyshev.hpp  coeff_chebyshev.hpp  coeff_cosine.hpp  coeff_exponential.hpp  coeff_inverse_exponential.hpp  coeff_inverse_log_power.hpp  (+15 more)
include/tsl/: leapr_file.hpp  njoy_runner.hpp  tsl.hpp
src/: CMakeLists.txt  energy_grid.cpp  file_read.cpp  file_write.cpp  integration.cpp  main.cpp  mavor.cpp  predefined_energy_grids.cpp  process_file.cpp  runtime_variables.cpp  utilities.cpp
src/common/: CMakeLists.txt  clenshaw.cpp  file_reading.cpp  hdf5_file.cpp  horner.cpp  integration.cpp  interpolation.cpp  linearize.cpp  runtime_variables.cpp  scale_basis.cpp  utilities.cpp
src/common/unit_tests/: CMakeLists.txt  test_arange.cpp  test_file_reading.cpp  test_linspace.cpp  test_scale_basis.cpp
src/elastic/: CMakeLists.txt  add_elastic.cpp  elastic.cpp
src/njoy/: CMakeLists.txt  leapr_file.cpp  njoy.cpp
src/otf/: CMakeLists.txt  otf.cpp  process_otf.cpp  sab_file.cpp
src/otf/fitting_functions/: CMakeLists.txt  basis_chebyshev.cpp  basis_cosine.cpp  basis_exponential.cpp  basis_inverse_exponential.cpp  basis_inverse_log_power.cpp  basis_inverse_power.cpp  basis_inverse_sqrt_log_power.cpp  basis_inverse_sqrt_power.cpp  basis_legendre.cpp  basis_log_power.cpp  basis_power.cpp  basis_sine.cpp  basis_sine_cosine.cpp  basis_sqrt_log_power.cpp  basis_sqrt_power.cpp  chebychev.cpp  chebyshev.cpp  cosine.cpp  exponential.cpp  fitting_function.cpp  inverse_exponential.cpp  inverse_log_power.cpp  inverse_power.cpp  inverse_sqrt_log_power.cpp  inverse_sqrt_power.cpp  legendre.cpp  log_power.cpp  power.cpp  sine.cpp  sine_cosine.cpp  sqrt_log_power.cpp  sqrt_power.cpp
src/otf/fitting_functions/unit_tests/: CMakeLists.txt  test_basis_chebyshev.cpp  test_basis_cosine.cpp  test_basis_exponential.cpp  test_basis_inverse_exponential.cpp  test_basis_inverse_log_power.cpp  test_basis_inverse_power.cpp  test_basis_inverse_sqrt_log_power.cpp  test_basis_inverse_sqrt_power.cpp  test_basis_legendre.cpp  test_basis_log_power.cpp  test_basis_power.cpp  test_basis_sine.cpp  test_basis_sine_cosine.cpp  test_basis_sqrt_log_power.cpp  test_basis_sqrt_power.cpp  test_chebyshev.cpp  test_cosine.cpp  test_exponential.cpp  test_inverse_exponential.cpp  test_inverse_log_power.cpp  test_inverse_power.cpp  test_inverse_sqrt_log_power.cpp  test_inverse_sqrt_power.cpp  test_legendre.cpp  test_log_power.cpp  test_power.cpp  test_sine.cpp  test_sine_cosine.cpp  test_sqrt_log_power.cpp  test_sqrt_power.cpp
src/predefined/: CMakeLists.txt  predefined_coeff_evaluations.cpp  predefined_fit_settings.cpp
src/sab/: CMakeLists.txt  energy_grid.cpp  file_read.cpp  file_write.cpp  process_file.cpp  sab.cpp
src/sab/unit_tests/: CMakeLists.txt  test_file_read.cpp
src/sample/: CMakeLists.txt  sample.cpp  sample_cdf.cpp  sample_coeff.cpp  sample_search.cpp
src/sample/fit_evaluation/: CMakeLists.txt  chebyshev.cpp  coeff_chebyshev.cpp  coeff_cosine.cpp  coeff_exponential.cpp  coeff_inverse_exponential.cpp  coeff_inverse_log_power.cpp  coeff_inverse_power.cpp  coeff_inverse_sqrt_log_power.cpp  coeff_inverse_sqrt_power.cpp  coeff_legendre.cpp  coeff_log_power.cpp  coeff_power.cpp  coeff_sine.cpp  coeff_sine_cosine.cpp  coeff_sqrt_log_power.cpp  coeff_sqrt_power.cpp  cosine.cpp  exponential.cpp  inverse_exponential.cpp  inverse_log_power.cpp  inverse_power.cpp  inverse_sqrt_log_power.cpp  inverse_sqrt_power.cpp  legendre.cpp  log_power.cpp  power.cpp  sine.cpp  sine_cosine.cpp  sqrt_log_power.cpp  sqrt_power.cpp
src/sample/fit_evaluation/unit_tests/: CMakeLists.txt  test_coeff_chebyshev.cpp  test_coeff_cosine.cpp  test_coeff_exponential.cpp  test_coeff_inverse_exponential.cpp  test_coeff_inverse_log_power.cpp  test_coeff_inverse_power.cpp  test_coeff_inverse_sqrt_log_power.cpp  test_coeff_inverse_sqrt_power.cpp  test_coeff_legendre.cpp  test_coeff_log_power.cpp  test_coeff_power.cpp  test_coeff_sine.cpp  test_coeff_sine_cosine.cpp  test_coeff_sqrt_log_power.cpp  test_coeff_sqrt_power.cpp
src/sample/unit_tests/: CMakeLists.txt  test_sample_search.cpp
src/test_inputs/: HinYH2_293K.h5
src/tsl/: CMakeLists.txt  leapr_file.cpp  njoy_runner.cpp  tsl.cpp
test_files/: HinYH2_293K_CDFs.h5  HinYH2_293K_tsl.h5  HinYH2_293_6K_CDFs.h5  HinYH2_coeffs.h5  HinYH2_energies.txt  HinYH2_tsl.h5
test_files/defaults/: HinYH2_sab.h5  HinYH2_tsl.h5
test_files/simple_endf_library/: remove_sab.py  tsl-HinH2O.endf  tsl-HinH2O.leapr  tsl-HinYH2.endf  tsl-crystalline-graphite.endf
