add_executable(test_chebyshev test_chebyshev.cpp)
add_executable(test_cosine test_cosine.cpp)
add_executable(test_exponential test_exponential.cpp)
add_executable(test_inverse_exponential test_inverse_exponential.cpp)
add_executable(test_inverse_log_power test_inverse_log_power.cpp)
add_executable(test_inverse_power test_inverse_power.cpp)
add_executable(test_inverse_sqrt_log_power test_inverse_sqrt_log_power.cpp)
add_executable(test_inverse_sqrt_power test_inverse_sqrt_power.cpp)
add_executable(test_legendre test_legendre.cpp)
add_executable(test_log_power test_log_power.cpp)
add_executable(test_power test_power.cpp)
add_executable(test_sine_cosine test_sine_cosine.cpp)
add_executable(test_sine test_sine.cpp)
add_executable(test_sqrt_log_power test_sqrt_log_power.cpp)
add_executable(test_sqrt_power test_sqrt_power.cpp)

target_link_libraries(test_chebyshev gtest_main fitting_functions_lib)
target_link_libraries(test_cosine gtest_main fitting_functions_lib)
target_link_libraries(test_exponential gtest_main fitting_functions_lib)
target_link_libraries(test_inverse_exponential gtest_main fitting_functions_lib)
target_link_libraries(test_inverse_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_inverse_power gtest_main fitting_functions_lib)
target_link_libraries(test_inverse_sqrt_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_inverse_sqrt_power gtest_main fitting_functions_lib)
target_link_libraries(test_legendre gtest_main fitting_functions_lib)
target_link_libraries(test_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_power gtest_main fitting_functions_lib)
target_link_libraries(test_sine_cosine gtest_main fitting_functions_lib)
target_link_libraries(test_sine gtest_main fitting_functions_lib)
target_link_libraries(test_sqrt_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_sqrt_power gtest_main fitting_functions_lib)

target_include_directories(test_chebyshev PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_cosine PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_exponential PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_inverse_exponential PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_inverse_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_inverse_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_inverse_sqrt_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_inverse_sqrt_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_legendre PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_sine_cosine PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_sine PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_sqrt_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_sqrt_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")

# Add a test target
add_test(NAME test_chebyshev COMMAND test_chebyshev)
add_test(NAME test_cosine COMMAND test_cosine)
add_test(NAME test_exponential COMMAND test_exponential)
add_test(NAME test_inverse_exponential COMMAND test_inverse_exponential)
add_test(NAME test_inverse_log_power COMMAND test_inverse_log_power)
add_test(NAME test_inverse_power COMMAND test_inverse_power)
add_test(NAME test_inverse_sqrt_log_power COMMAND test_inverse_sqrt_log_power)
add_test(NAME test_inverse_sqrt_power COMMAND test_inverse_sqrt_power)
add_test(NAME test_legendre COMMAND test_legendre)
add_test(NAME test_log_power COMMAND test_log_power)
add_test(NAME test_power COMMAND test_power)
add_test(NAME test_sine_cosine COMMAND test_sine_cosine)
add_test(NAME test_sine COMMAND test_sine)
add_test(NAME test_sqrt_log_power COMMAND test_sqrt_log_power)
add_test(NAME test_sqrt_power COMMAND test_sqrt_power)